--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "radix/celo",
+    "name": "radixs/celo",
     "description": "Machine learning platform in PHP",
     "license": "MIT",
     "type": "project",
