added webpack for bundling of js and css files, added initial js app structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 /.idea/
-###> symfony/framework-bundle ###
-/.env.local
-/.env.local.php
-/.env.*.local
-/public/bundles/
-/var/
-/vendor/
-###< symfony/framework-bundle ###
+/core/vendor/
+/gui/node_modules/
+/gui/dist/
